# Atlas77-VM

./: CHANGELOG.md  Cargo.toml
atlas_common/: Cargo.toml
atlas_common/src/: lib.rs
atlas_compiler/: Cargo.toml
atlas_compiler/atlas_lexer/: Cargo.toml
atlas_compiler/atlas_lexer/src/: lib.rs
atlas_compiler/atlas_parser/: Cargo.toml
atlas_compiler/atlas_parser/src/: ast.rs  class.rs  grammar.lalrpop  lib.rs
atlas_compiler/src/: lib.rs  main.rs
atlas_frontend/: Cargo.toml
atlas_vm/: Cargo.toml
atlas_vm/benches/: vm_benchmark.rs
atlas_vm/examples/: extern_call.rs  fib.rs  fib.txt  mem_test.rs
atlas_vm/src/: main.rs
atlas_vm/src/instruction/: mod.rs
atlas_vm/src/memory/: object_map.rs  vm_data.rs
atlas_vm/src/runtime/: mod.rs
examples/: test.atlas
vm/benches/: vm_benchmark.rs
vm/examples/: extern_call.rs  fib.rs  mem_test.rs  mem_test.txt
vm/src/: lib.rs  main.rs
vm/src/memory/: object_map.rs
vm/src/runtime/: mod.rs
